--- a/Web.config
+++ b/Web.config
@@ -16,6 +16,9 @@
       </controls>
     </pages>
   </system.web>
+	<appSettings>
+		<add key ="ConnectionString" value="server=.\SQLEXPRESS; database=Site; Integrated Security=SSPI"/>
+	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
       <dependentAssembly>
