--- a/Web.config
+++ b/Web.config
@@ -17,7 +17,7 @@
     </pages>
   </system.web>
 	<appSettings>
-		<add key ="ConnectionString" value="server=.\SQLEXPRESS; database=Site; Integrated Security=SSPI"/>
+		<add key ="ConnectionString" value="server=.\SQLEXPRESS; database=SITE; Integrated Security=SSPI"/>
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
